--- a/src/main/resources/projeto/gerenciadordeestoque/deletar.fxml
+++ b/src/main/resources/projeto/gerenciadordeestoque/deletar.fxml
@@ -55,27 +55,31 @@
          <children>
             <VBox prefHeight="61.0" prefWidth="176.0">
                <children>
-                  <Label text="Digite o ID do Produto:">
+                  <Label text="Código do Produto:">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="tfID" prefHeight="25.0" prefWidth="56.0" />
+                  <TextField fx:id="tfCodigo" prefHeight="25.0" prefWidth="56.0" />
                </children>
             </VBox>
             <Separator prefWidth="16.0" />
-            <Button fx:id="btnPesquisarPorItem" mnemonicParsing="false" text="Deletar">
+            <Button fx:id="btnPesquisarPorItem" mnemonicParsing="false" onAction="#onClickDeletar" text="Deletar">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
          </children>
       </HBox>
-      <Label fx:id="lbAviso" layoutX="447.0" layoutY="366.0" text="Mensagem de Sucesso ou Fracasso">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
+      <HBox alignment="CENTER" layoutX="54.0" layoutY="345.0" prefHeight="45.0" prefWidth="1016.0">
+         <children>
+            <Label fx:id="lbAviso">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
    </children>
    <padding>
       <Insets bottom="32.0" left="32.0" right="32.0" top="32.0" />
