--- a/src/main/resources/projeto/gerenciadordeestoque/css/global.css
+++ b/src/main/resources/projeto/gerenciadordeestoque/css/global.css
@@ -12,8 +12,8 @@ cinza-escuro: #222f3e
     -fx-border-width: 3px;
     -fx-border-color: #f5f6fa;
     -fx-border-style: solid;
-    -fx-border-radius: 8;
-    -fx-background-radius: 8;
+    -fx-border-radius: 8px;
+    -fx-background-radius: 8px;
     -fx-font-size: 18px;
     -fx-text-fill: #f5f6fa;
     -fx-font-weight: bold;
@@ -29,7 +29,11 @@ cinza-escuro: #222f3e
     -fx-text-fill: #222f3e;
 }
 
-/*Label {*/
-/*    -fx-text-fill: #f5f6fa;*/
-/*    -fx-font-weight: bold;*/
-/*}*/
+Label {
+    -fx-text-fill: #f5f6fa;
+    -fx-font-weight: bold;
+}
+
+.table-cell Label{
+    -fx-text-fill: #222f3e;
+}
