--- a/src/main/resources/projeto/gerenciadordeestoque/pesquisar.fxml
+++ b/src/main/resources/projeto/gerenciadordeestoque/pesquisar.fxml
@@ -49,12 +49,12 @@
             </Button>
          </children>
       </HBox>
-      <Label layoutX="368.0" layoutY="174.0" text="Pesquisar Produtos" textAlignment="CENTER">
+      <Label layoutX="345.0" layoutY="179.0" text="Pesquisar Produtos" textAlignment="CENTER">
          <font>
             <Font size="48.0" />
          </font>
       </Label>
-      <HBox alignment="CENTER" layoutX="61.0" layoutY="328.0" prefHeight="61.0" prefWidth="1016.0">
+      <HBox alignment="BOTTOM_CENTER" layoutX="61.0" layoutY="328.0" prefHeight="61.0" prefWidth="1016.0">
          <children>
             <VBox prefHeight="200.0" prefWidth="150.0">
                <children>
@@ -88,7 +88,7 @@
       <TableView fx:id="tvProdutos" layoutX="154.0" layoutY="404.0" prefHeight="280.0" prefWidth="834.0">
         <columns>
           <TableColumn fx:id="colID" prefWidth="42.0" text="ID" />
-          <TableColumn fx:id="colCodigo" prefWidth="93.0" text="Código" />
+          <TableColumn fx:id="colCodigo" prefWidth="93.0" style="-fx-text-fill: black;" text="Código" />
             <TableColumn fx:id="colNome" prefWidth="183.0" text="Nome" />
             <TableColumn fx:id="colMarca" prefWidth="116.0" text="Marca" />
             <TableColumn fx:id="colCategoria" prefWidth="116.0" text="Categoria" />
@@ -103,6 +103,6 @@
    </padding>
    <stylesheets>
       <URL value="@css/global.css" />
-      <URL value="@css/pesquisar.css" />
+      <URL value="@css/botoes.css" />
    </stylesheets>
 </AnchorPane>
